@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}
class Collaborators{
    name
    birthdate
    admission date
    address
    contact info (mobile and email)
    ID doc type
    ID number
}
class Managers {
    name
    email
    position
    phone
}
class HRM{
}
class Skill{}
Skill "1..*" -- "1"Collaborators: attributed to >
Managers "1"-- "*"Collaborators: hire and register >
Managers "1" -- "1" HRM : have >

@enduml